# ciel

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  run.sh
tests/: CMakeLists.txt  lexer_tests.cpp  test_mangling.cpp  test_symbol_table.cpp  test_type_factory.cpp
tests/data/: complex_lexer_input.ciel
tests/testcases/: 001_basic_int_declaration.ciel  002_basic_char_declaration.ciel  003_basic_bool_true.ciel  004_basic_bool_false.ciel  005_int_array_initialization.ciel  006_char_array_string_init.ciel  007_single_pointer_declaration.ciel  008_double_pointer_declaration.ciel  009_pointer_dereference.ciel  010_double_pointer_dereference.ciel  011_struct_definition_basic.ciel  012_struct_member_access.ciel  013_enum_definition_basic.ciel  014_union_definition_basic.ciel  015_union_member_access.ciel  016_typedef_struct_alias.ciel  017_typedef_int_alias.ciel  018_arithmetic_addition.ciel  019_arithmetic_subtraction.ciel  020_arithmetic_multiplication.ciel  021_arithmetic_division.ciel  022_arithmetic_modulo.ciel  023_compound_assignment_add.ciel  024_compound_assignment_multiply.ciel  025_logical_and_operator.ciel  026_logical_or_operator.ciel  027_logical_not_operator.ciel  028_if_statement_simple.ciel  029_if_else_statement.ciel  030_if_else_if_chain.ciel  031_switch_statement_basic.ciel  032_switch_fallthrough_cases.ciel  033_for_loop_basic.ciel  034_while_loop_basic.ciel  035_do_while_loop.ciel  036_until_loop_basic.ciel  037_continue_statement.ciel  038_break_statement.ciel  039_goto_statement.ciel  040_function_declaration.ciel  (+60 more)
tests/testcases/invalid/: 01_unrecognized_character.ciel  02_unknown_escape_in_string.ciel  03_unterminated_string.ciel  04_invalid_char_literal.ciel  05_unterminated_string_eof.ciel  06_unterminated_comment_eof.ciel  07_unknown_escape_in_char.ciel  08_unrecognized_operator.ciel  09_bad_hex_escape_in_string.ciel  10_bad_octal_escape_in_string.ciel
tests/testcases/invalid/lexical/: 05_unterminated_string_eof.ciel  10_bad_octal_escape_in_string.ciel
tests/testcases/invalid/semantic/: 100_assign_to_bitwise_or_result.ciel  101_increment_shift_result.ciel  102_assign_to_modulo_result.ciel  11_break_outside_loop_or_switch.ciel  12_continue_outside_loop.ciel  13_continue_in_switch_not_loop.ciel  14_case_outside_switch.ciel  15_default_outside_switch.ciel  16_multiple_default_in_switch.ciel  17_switch_with_no_cases.ciel  18_while_condition_not_bool.ciel  19_until_condition_not_bool.ciel  20_do_while_condition_not_bool.ciel  21_for_condition_not_bool.ciel  22_if_condition_not_bool.ciel  23_switch_subject_bool.ciel  24_switch_subject_float.ciel  25_return_outside_function.ciel  26_return_without_value_in_non_void.ciel  27_return_with_value_in_void_function.ciel  28_return_type_mismatch.ciel  29_goto_outside_function.ciel  30_missing_return_if_without_else.ciel  31_missing_return_no_return_at_all.ciel  31_return_type_mismatch_numeric.ciel  32_missing_return_switch_no_default.ciel  33_for_with_decl_condition_not_bool.ciel  33_missing_return_case_without_return.ciel  34_function_redefinition.ciel  34_return_string_in_int_function.ciel  35_function_redefinition_diff_param_names.ciel  35_missing_return_after_loop.ciel  36_function_redefinition_void.ciel  36_missing_return_nested_if.ciel  37_missing_return_else_no_return.ciel  38_return_type_mismatch_pointer.ciel  39_duplicate_param_names_in_function_definition.ciel  39_return_type_mismatch_numeric.ciel  40_break_in_nested_function.ciel  40_param_redeclaration_in_function_scope.ciel  (+82 more)
tests/testcases/valid/: 01_basics_and_typedefs.ciel  02_arrays_and_strings.ciel  03_pointers.ciel  04_structs_enums_unions.ciel  05_functions_and_calls.ciel  06_arithmetic_and_assignment.ciel  07_inc_dec_unary.ciel  08_comparisons_logical_ternary.ciel  09_control_flow_selection.ciel  10_loops_and_iteration.ciel  11_globals_and_storage.ciel  12_goto_and_misc.ciel  13_null_and_checks.ciel  14_classes_and_access_modifiers.ciel  14_float_literals.ciel  15_float_literals.ciel  16_function_overloading.ciel
tests/testcases/valid/basic/: 01_variables_and_literals.ciel  02_simple_expressions.ciel  03_globals.ciel
tests/testcases/valid/classes/: 01_basic_classes.ciel  01_inheritance.ciel  02_operator_overloading.ciel  03_basic_classes.ciel  03_inheritance_and_methods.ciel  04_complex_method_calls.ciel  05_complex_method_calls.ciel  05_self_referential_methods.ciel  06_method_overloading.ciel  08_inheritance.ciel  08_operator_overloading.ciel  09_inheritance_and_methods.ciel  09_inheritance_complete_base.ciel  10_complex_method_calls.ciel  11_static_and_const_methods.ciel  11_this_basic_member_access.ciel  12_inheritance.ciel  12_this_method_chaining.ciel  13_this_parameter_shadowing.ciel  14_basic_classes.ciel  14_this_calling_other_methods.ciel  15_this_pointer_members.ciel  16_static_and_const_methods.ciel  16_this_pointer_comparison.ciel  17_simple_overloading.ciel  17_this_nested_method_calls.ciel  18_this_basic_member_access.ciel  18_this_returning_this_pointer.ciel  19_this_method_chaining.ciel  19_this_with_inheritance.ciel  20_this_explicit_and_implicit.ciel  21_this_in_conditional_statements.ciel  22_this_inside_loop_constructs.ciel  23_this_array_member_access.ciel  23_this_pointer_comparison.ciel  24_initialiser_list.ciel  24_this_nested_method_calls.ciel  25_destructor_on_return.ciel  25_this_returning_this_pointer.ciel  26_destructor_simple_return.ciel  (+5 more)
tests/testcases/valid/complex/: 01_mixed_features.ciel  02_mangling_tests.ciel  03_stress_test.ciel  04_inheritance_hierarchy.ciel  05_full_operator_overload.ciel  06_libc_functions.ciel  07_struct_array.ciel  08_types.ciel
tests/testcases/valid/control_flow/: 01_if_else.ciel  02_loops.ciel  03_switch.ciel  04_goto_labels.ciel  04_switch_sparse.ciel  05_switch_mixed.ciel  05_switch_sparse.ciel  06_switch_mixed.ciel  07_switch_unique_cases.ciel  08_switch_char_cases.ciel  08_switch_enum.ciel  10_for_loops_basic.ciel  11_for_loops_break_continue.ciel  12_for_loops_comparisons.ciel  13_for_loops_complex_conditions.ciel  14_for_loops_increments.ciel  (+8 more)
(+200 files in other folders)
